# storyXlive

./: README.md  StoryXLive.code-workspace  app.json  babel.config.js  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/libs/: ffmpeg-kit-full-6.0.2.aar
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/StoryXLive/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/storylive/ffmpeg/: FFmpegModule.java  FFmpegPackage.java
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
app/: _layout.tsx  index.tsx
components/: AnimatedButton.tsx  FloatingActionButton.tsx  OverlaySystem.tsx  RecordingControls.tsx  VideoProcessor.tsx  VideoRecorder.tsx  settings.tsx  text.tsx
ios/: Podfile
ios/StoryXLive/: Info.plist
ios/StoryXLive.xcodeproj/: project.pbxproj
ios/StoryXLive.xcodeproj/xcshareddata/xcschemes/: StoryXLive.xcscheme
ios/StoryXLive.xcworkspace/: contents.xcworkspacedata
plugins/: withFFmpeg.js
shared/: NativeFFmpegModule.cpp  NativeFFmpegModule.h
specs/: NativeFFmpegModule.ts
types/: react-native-video-processing.d.ts
utils/: FFmpeg.ts  VideoProcessor.ts  videoProcessing.ts
